# avro-rs

./: Cargo.toml
generators/: hashmap.py
resources/: data.json  remapped.json
src/: constraints.rs  main.rs  parse.rs
