[package]
name = "avro-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
# Rust-Embed to embed json into our binary
rust-embed="6.4.2"
# Serde to parse json
serde_json = "1.0"
# # Compress our JSON files
# include-flate = "0.1.4"